--- a/BagOfWords/svm/SVM.ipynb
+++ b/BagOfWords/svm/SVM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -49,6 +49,7 @@
     "y_test = array([0 for _ in range(100)] + [1 for _ in range(100)])\n",
     "\n",
     "from sklearn import svm\n",
+    "from sklearn.metrics import accuracy_score\n",
     "\n",
     "#SVM:\n",
     "clf = svm.LinearSVC(C=40, class_weight=None, dual=True, fit_intercept=True,\n",
@@ -63,33 +64,8 @@
     "\n",
     "# Make predictions on unseen test data\n",
     "clf_predictions = clf.predict(x_test)\n",
-    "print(\"Accuracy: {}%\".format(clf.score(x_test, y_test) * 100 ))\n"
+    "print(\"Accuracy: {}%\".format(accuracy_score(y_test, clf_predictions) * 100 ))\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "200\n",
-      "200\n",
-      "1800\n",
-      "1800\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
