Updated RF Model

--- a/RFModels/RFModel.ipynb
+++ b/RFModels/RFModel.ipynb
@@ -2,82 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'nltk'",
+     "evalue": "No module named 'BagOfWords'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-7587d33544fb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mstring\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mstring\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpunctuation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mnltk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcorpus\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mstopwords\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mos\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mlistdir\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mcollections\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mCounter\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'nltk'"
+      "\u001b[0;32m<ipython-input-3-c14d13915574>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'../util'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mBagOfWords\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mutil\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0marray\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mensemble\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mRandomForestClassifier\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'BagOfWords'"
      ]
     }
    ],
    "source": [
-    "import string\n",
-    "from string import punctuation\n",
-    "from nltk.corpus import stopwords\n",
-    "from os import listdir\n",
-    "from collections import Counter\n",
+    "import sys\n",
+    "sys.path.append('../util')\n",
+    "import util\n",
     "from numpy import array\n",
-    "from keras.preprocessing.text import Tokenizer\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import KFold\n",
-    "\n",
-    "#Open file in read-only and extract content into variable 'content'\n",
-    "def loadFile(filename):\n",
-    "    openFile = open(filename, 'r')\n",
-    "    content = openFile.read()\n",
-    "    openFile.close()\n",
-    "    return content\n",
-    "\n",
-    "#Tokenize file\n",
-    "def tokenizeFile(filename):\n",
-    "    tokens = filename.split()                                   #remove whitespace\n",
-    "    tokens = [x.strip(string.punctuation) for x in tokens]           #remove punctuation\n",
-    "    tokens = [word for word in tokens if word.isalpha()]        #remove none alphabetic words\n",
-    "    stopWords = set(stopwords.words('english'))                 #remove stop words\n",
-    "    tokens = [word for word in tokens if not word in stopWords]\n",
-    "    tokens = [word for word in tokens if len(word) > 1]         #remove 1-letter tokens\n",
-    "    return tokens\n",
-    "\n",
-    "#Convert tokens to single strings for easier encoding\n",
-    "def fileToLine(filename, vocab):\n",
-    "    content = loadFile(filename)\n",
-    "    tokens = tokenizeFile(content)\n",
-    "    tokens = [word for word in tokens if word in vocab]\n",
-    "    return ' '.join(tokens)\n",
-    "\n",
-    "#Load all reviews and start mapping words to counter\n",
-    "def loadReviews(directory, vocab, is_train):\n",
-    "    lines = list()\n",
-    "    for filename in listdir(directory):\n",
-    "        if filename.startswith('cv9') and is_train:\n",
-    "            continue\n",
-    "        if not filename.startswith('cv9') and not is_train:\n",
-    "            continue\n",
-    "        path = directory + '/' + filename\n",
-    "        line = fileToLine(path, vocab)\n",
-    "        lines.append(line)\n",
-    "    return lines\n",
-    "\n",
-    "#Predict reviews based on MLP network\n",
-    "def predictReview(review, vocab, tokenizer, model):\n",
-    "\n",
-    "    #Split review into words and filter based on current vocab\n",
-    "    tokens = tokenizeFile(review)\n",
-    "    tokens = [word for word in tokens if word in vocab]\n",
-    "    lines = ' '.join(tokens)\n",
-    "    encode = tokenizer.texts_to_matrix([lines], mode='freq')\n",
-    "\n",
-    "    #Predict review: 0 if positive, 1 if negative\n",
-    "    y = model.predict(encode, verbose=0)\n",
-    "    return round(y[0,0])\n",
-    "\n",
+    "from sklearn.metrics import accuracy_score\n",
     "\n",
     "### Main ###\n",
     "vocabFile = 'vocab.txt'\n",
@@ -88,19 +35,19 @@
     "print(\"Loading data sets...\")\n",
     "\n",
     "#Training set\n",
-    "pos_reviews = loadReviews('data/pos', vocab, True)\n",
-    "neg_reviews = loadReviews('data/neg', vocab, True)\n",
-    "tokenizer = Tokenizer()\n",
-    "total = pos_reviews+neg_reviews\n",
-    "tokenizer.fit_on_texts(total)\n",
-    "x_train = tokenizer.texts_to_matrix(total, mode='freq')\n",
+    "dataset = \"dataset_2\" #Change data set here: dataset_1 or dataset_2\n",
+    "\n",
+    "pos_reviews = util.loadReviews('../data_sets/' + dataset + '/pos', vocab, True)\n",
+    "neg_reviews = util.loadReviews('../data_sets/' + dataset + '/neg', vocab, True)\n",
+    "train_rev = pos_reviews+neg_reviews\n",
+    "\n",
     "y_train = array([0 for _ in range(900)] + [1 for _ in range(900)])\n",
     "\n",
     "#Testing Set\n",
-    "pos_reviews = loadReviews('data/pos', vocab, False)\n",
-    "neg_reviews = loadReviews('data/neg', vocab, False)\n",
-    "total = pos_reviews+neg_reviews\n",
-    "x_test = tokenizer.texts_to_matrix(total, mode='freq')\n",
+    "pos_reviews = util.loadReviews('../data_sets/' + dataset + '/pos', vocab, False)\n",
+    "neg_reviews = util.loadReviews('../data_sets/' + dataset + '/neg', vocab, False)\n",
+    "test_rev = pos_reviews+neg_reviews\n",
+    "\n",
     "y_test = array([0 for _ in range(100)] + [1 for _ in range(100)])\n",
     "\n",
     "#Train Random Forest\n",
@@ -115,6 +62,13 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
